<resources>
    <string name="app_name">AndroidAssignments</string>
    <string name="hello_message">Hello World!</string>
    <string name="ButtonText">I\'m a button</string>
    <string name="send">Send</string>
    <string name="start_chat_button_text">Start Chat</string>
    <string name="chat_greeting">Welcome to the chat!</string>
    <string name="outgoing_icon">Outgoing Icon</string>
    <string name="incoming_icon">Incoming Icon</string>

    <string name="login_text">Login</string>
    <string name="login_hint">Enter your email</string>
    <string name="password_text">Password</string>
    <string name="password_hint">Enter your password</string>
    <string name="login_button_text">Login</string>
    <string name="login_button_description">Login to your account</string>

    <string name="radio_button">Radio Button</string>
    <string name="check_box">Check Box</string>
    <string name="switch_label">Switch Label</string>
    <string name="camera_button_desc">Open Camera</string>

    <string name="dialog_message">Do you want to finish this activity?</string>
    <string name="dialog_title">Finish Activity</string>
    <string name="ok">Yes</string>
    <string name="cancel">No</string>
    <string name="radio_clicked">Radio button clicked</string>
    <string name="switch_on">Switch turned ON</string>
    <string name="switch_off">Switch turned OFF</string>

    <string name="dialog_icon">Dialog icon</string>
    <string name="hint_new_message">New Message</string>
    <string name="choice_1">Choice 1</string>
    <string name="choice_2">Choice 2</string>
    <string name="choice_3">Choice 3</string>
    <string name="about">About</string>
    <string name="test_toolbar_button_text">Test Toolbar</string>



    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>

</resources>
