<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_one"
        android:title="@string/choice_1"
        android:icon="@drawable/ic_action_one"
        android:orderInCategory="100"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_two"
        android:title="@string/choice_2"
        android:icon="@drawable/ic_action_two"
        android:orderInCategory="101"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_three"
        android:title="@string/choice_3"
        android:icon="@drawable/ic_action_three"
        android:orderInCategory="102"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_about"
        android:title="@string/about"
        app:showAsAction="never" />
</menu>
